--- a/.github/workflows/teste_app.yml
+++ b/.github/workflows/teste_app.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
+        uses: actions/checkout@v4
       - name: Usando Python 3.11
         uses: actions/setup-python@v5
         with:
